fix(ui): Multi-line input hint overlaps with elements below for LDAP IdP HTML Form
fixes gravitee-io/issues#2477

--- a/gravitee-am-ui/src/app/domain/settings/providers/creation/steps/step2/step2.component.scss
+++ b/gravitee-am-ui/src/app/domain/settings/providers/creation/steps/step2/step2.component.scss
@@ -1,6 +1,6 @@
 .provider-creation-step2-container {
   h4 {
-    margin: 0;
+    margin: 10px 0;
   }
 
   small {
