--- a/gravitee-am-ui/src/app/domain/settings/providers/provider/form/form.component.scss
+++ b/gravitee-am-ui/src/app/domain/settings/providers/provider/form/form.component.scss
@@ -5,3 +5,25 @@
     content: '';
   }
 }
+
+:host /deep/ mat-form-field {
+  .mat-form-field-wrapper {
+    padding-bottom: 5px;
+
+    .mat-form-field-underline {
+      position: initial !important;
+      display: block;
+      margin-top: -1px;
+    }
+
+    .mat-form-field-subscript-wrapper,
+    .mat-form-field-ripple {
+      position: initial !important;
+      display: table;
+    }
+
+    .mat-form-field-subscript-wrapper {
+      min-height: calc(1em + 1px);
+    }
+  }
+}
